<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/ll_top"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_above="@+id/ll_bottom"
      android:orientation="vertical"
      >

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:weightSum="10"
        >

      <LinearLayout
          android:id="@+id/toolbar_settings"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:gravity="center"
          android:visibility="invisible"
          >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings_icon"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="6"
          android:gravity="center"
          >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shop_logo"
            />

      </LinearLayout>

      <RelativeLayout
          android:id="@+id/toolbar_checkout"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:gravity="center"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

          <ImageView
              android:id="@+id/toolbar_image_cart"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:src="@drawable/shopping_cart_nav_bar_icon"
              />

        </LinearLayout>

        <TextView
            android:id="@+id/item_list_cart_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/border_badge_cart"
            android:textColor="@android:color/white"
            android:textSize="9sp"
            tools:text="1"
            />

      </RelativeLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/items_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/gray_mid_light"
        android:dividerHeight="0.6dp"
        android:fadeScrollbars="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/cart_list_title"
        android:textColor="@color/gray_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/orange_light"
        />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_bottom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/ll_bottom_button"
      android:orientation="vertical"
      >

    <LinearLayout
        android:id="@+id/ll_ship_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:layout_marginTop="5dp"
          android:baselineAligned="false"
          android:weightSum="10"
          >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp"
            >

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:adjustViewBounds="true"
              android:src="@drawable/shipping_icon"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="10dp"
            >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/cart_confirmation_shipping_method"
              android:textColor="@color/gray_dark"
              android:textSize="11sp"
              android:textStyle="bold"
              />

          <TextView
              android:id="@+id/cart_confimation_shipping_method"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/cart_confirmation_shipping_method_default"
              android:textColor="@color/gray_dark"
              android:textSize="11sp"
              />

        </LinearLayout>

      </LinearLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="1.5dp"
          android:layout_marginBottom="2dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:background="@color/gray_light"
          />

      <View
          android:layout_width="match_parent"
          android:layout_height="1.5dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="2dp"
          android:background="@color/gray_light"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="2"
        >

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/cart_amount_title_value_margin_lr_margin"
          android:layout_weight="1"
          android:text="@string/cart_list_tax"
          android:textColor="@color/gray_dark"
          android:textSize="12sp"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/cart_tax_text"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/cart_amount_title_value_margin_lr_margin"
          android:layout_weight="1"
          android:textAlignment="textEnd"
          android:textColor="@color/gray_dark"
          android:textSize="14sp"
          android:textStyle="bold"
          tools:text="1.99"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="2"
        >

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/cart_amount_title_value_margin_lr_margin"
          android:layout_weight="1"
          android:text="@string/cart_list_subtotal"
          android:textColor="@color/gray_dark"
          android:textSize="12sp"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/cart_subtotal_text"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/cart_amount_title_value_margin_lr_margin"
          android:layout_weight="1"
          android:textAlignment="textEnd"
          android:textColor="@color/gray_dark"
          android:textSize="14sp"
          android:textStyle="bold"
          tools:text="1.99"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="2"
        >

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/cart_amount_title_value_margin_lr_margin"
          android:layout_weight="1"
          android:text="@string/cart_list_total"
          android:textColor="@color/gray_dark"
          android:textSize="16sp"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/cart_total_text"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/cart_amount_title_value_margin_lr_margin"
          android:layout_weight="1"
          android:textAlignment="textEnd"
          android:textColor="@color/gray_dark"
          android:textSize="18sp"
          android:textStyle="bold"
          tools:text="1.99"
          />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/orange_light"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray_dark"
        />

  </LinearLayout>
  <LinearLayout
      android:id="@+id/ll_bottom_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingBottom="10dp"
      >
    <LinearLayout
        android:id="@+id/ll_masterpass_button"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/ll_payment_method_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
      <ImageView
          android:id="@+id/iv_payment_method_icon"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:scaleType="fitCenter"
          android:src="@null"
          android:visibility="gone"
          />
      <TextView
          android:id="@+id/tv_payment_method"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/size_divider_height"
          android:drawableEnd="@drawable/icon_arrow_right_black"
          android:text="@string/payment_method"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold"
          />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_checkout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="@dimen/size_divider_height"
        android:background="@drawable/border_confirm_cart"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="@string/cart_list_checkout"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        />
  </LinearLayout>
</RelativeLayout>